Working on the ResultSet implementation, it's close but icky